# food-delivery-robot

./: .env.example  .gitignore  DOCKER_README.md  docker-compose.yml
food-delivery-mcp/: Dockerfile  Dockerfile.dev  PROJECT_CONTEXT.md  README.md  config.yaml  page_elements.json  requirements.txt  run_reverse.sh  test_tools.py
food-delivery-mcp/debug_output/20251215_111001/: 01_after_open.json  03_before_phf.json  03_click_phf.json  04_click_search.json  04_phf_page.json  05_input_keyword.json  05_search_input_page.json  06_before_search_btn.json  06_click_search_btn.json  07_search_result.json
food-delivery-mcp/debug_output/20251215_111420/: 01_after_open.json  03_before_phf.json  03_click_phf.json  04_click_search.json  04_phf_page.json  05_input_keyword.json  05_search_input_page.json  06_before_search_btn.json  06_click_search_btn.json  07_search_result.json
food-delivery-mcp/scripts/: adb_tools.py  get_page_state.py  page_elements.json  snapshot.py  test_extract.py  test_notification_monitor.py  test_parse_meals.py  test_search_flow.py  test_send_notification.py
food-delivery-mcp/scripts/debug_output/: 173526_payment.xml  (+3 more)
food-delivery-mcp/src/: __init__.py  config.py  main.py  reverse_client.py  schemas.py
robot-audio-bridge/: robot-audio-bridge.service  robot_audio_bridge.py
robot_tts_service/: CMakeLists.txt  README.md  tts_server.py  tts_speak.cpp
simple-voice-client/: Dockerfile  Dockerfile.dev  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
simple-voice-client/src/: App.tsx  RobotAudioBridge.tsx  index.css
(+15 files in other folders)
